avoid a pagebreak on the very first page

--- a/designs/pdf/digital/classic/assets/style.css
+++ b/designs/pdf/digital/classic/assets/style.css
@@ -90,7 +90,7 @@
         string-set: section-title content();
     }
 
-    .pmb-section{
+    .pmb-section-wrapper:not(.pmb-first-section-wrapper){
         break-before:page;
     }
 
