--- a/designs/pdf/print/classic/assets/style.css
+++ b/designs/pdf/print/classic/assets/style.css
@@ -95,7 +95,7 @@
         string-set: section-title content();
     }
 
-    .pmb-section{
+    .pmb-section-wrapper:not(.pmb-first-section-wrapper){
         break-before:page;
     }
 
